2013-04-16 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Rename DAODM_HSG1 to DAOD_HSG1 in LODPK

2013-04-04 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * rhadd.py Generate temporary filenames with the prefix 'tmp.'
    * Tagging as PATJobTransforms-00-05-11

2013-03-28 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add embedded NTUP types to LODPK
    * MergeNTUP_trf.py Add embedded NTUP types to LODPK

2013-03-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.ValidateD3PD_trf.py
      - Define a logging object for pre/postExec logging to act on
    * Tagging as PATJobTransforms-00-05-10

2013-03-21 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding the NTUP_COMMON definition to Reco_trf.py
	* Tagging as PATJobTransforms-00-05-09

2013-03-20  John Chapman  <John.Chapman@cern.ch>
	* requires SimuJobTransforms-00-18-62 onwards or
	SimuJobTransforms-00-18-38-11 onwards.
	* share/skeleton.MergeHit.py - adapt to use SimuJobTransforms
	HitsFilePeeker. Specifying a geometryVersion is now optional for
	Merging_t(r)f.py when merging HITS files.
	* tagging as PATJobTransforms-00-05-08	

2013-03-12 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Configuration.py
      - Add AddOutputNTUP_FTKIPFile argument definition function

2013-03-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.AODtoDPD_trf.py 
      - Remove the automated VOFinder set and lock from TOP DPDs
    * ValidateD3PD_trf.py
      - Add PhysVal_Photons.root to list of root files to merge
    * skeleton.ValidateD3PD_trf.py
      - Add JO fragment to activate in PhysVal_Photons.root
      - Add hooks for {pre/post}{Exec/Include}
    * tagging as PATJobTransforms-00-05-07

2013-02-27 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputNTUP_FTKIPFile to LODPK
    * Merging_trf.py Make the inputLogsFile optional for Hits merging
    * tagging as PATJobTransforms-00-05-06
